Remove unnecessary agent details